feat: add query parameters to dump CLI log file into stdout
