# assets/openapi.json
@@ -1101,6 +1101,16 @@
             "schema": {
               "$ref": "#/components/schemas/RemoteSource"
             }
+          },
+          {
+            "name": "dump-cli-logs",
+            "in": "query",
+            "description": "Boolean to dump the CLI logs content in stdout.",
+            "required": false,
+            "example": "true",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
@@ -1328,6 +1338,16 @@
             "name": "skip-qa",
             "in": "query",
             "description": "Boolean to skip interactive QA.",
+            "required": false,
+            "example": "true",
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "dump-cli-logs",
+            "in": "query",
+            "description": "Boolean to dump the CLI logs content in stdout.",
             "required": false,
             "example": "true",
             "schema": {
